# F1Prediction

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  EXPERIMENTS.md  docker-compose.yml  main.py  pyproject.toml  sweep.db
.claude/projects/-Users-nick-code-F1Prediction/memory/: MEMORY.md  feedback_explicit_lookups.md
.github/workflows/: deploy.yml
configs/: train.yaml
configs/model/: lightgbm.yaml  linear.yaml  mlp.yaml  xgboost.yaml
f1prediction/: config.py
f1prediction/data/: constants.py  dataloader.py  dataset.py  download.py  features.py  forecast.py  pipeline.py  registry.py  test.ipynb
f1prediction/models/: __init__.py  base.py  gbm.py  mlp.py
f1prediction/training/: cv.py  gbm_trainer.py  metrics.py  refit.py  splits.py  train.py  trainer.py
outputs/2026-04-06/14-22-42/.hydra/: config.yaml  hydra.yaml
scripts/: bootstrap_per_event_models.py  build_webapp_model.py  download_history.py  download_overnight.py  inference.py  live_predict.py  pca_analysis.py  predict.py  predict_china2026.py  prepare_data.py  run_ablation.sh  run_experiments.sh  sweep.py  train.py  train_full.py  train_full_from_sweep.py
tests/: conftest.py  test_dataloader_integration.py  test_dataset.py  test_features.py  test_pipeline_integration.py
tests/snapshots/: dataloader_seed42.pt  features_2020.parquet
webapp/: app.py  backtest.py  fantasy.py  feature_meta.py  runner.py  scheduler.py  store.py
webapp/static/: style.css
webapp/templates/: base.html  fantasy.html  index.html
webapp_config/: checkpoint.pt  config.json  drivers.json  track_locations.json
