[project]
name = "f1prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastf1>=3.8.1",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "joblib>=1.4.0",
    "omegaconf>=2.3.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "wandb>=0.25.1",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]
lightgbm = ["lightgbm>=4.0"]
gbm = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
