[project]
name = "f1prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "fastf1>=3.8.1",
    "hydra-core>=1.3.2",
    "jinja2>=3.1",
    "joblib>=1.4.0",
    "optuna>=3.6",
    "omegaconf>=2.3.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "ruff>=0.15.8",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.32",
    "wandb>=0.25.1",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]
lightgbm = ["lightgbm>=4.0"]
gbm = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
]
